# fastcluster

./: .gitattributes  .gitignore  .manylinux-install.sh  .travis.yml  CITATION.txt  COPYING.txt  INSTALL.txt  MANIFEST.in  NEWS.txt  README.md  README.txt  appveyor.yml  dev-requirements.txt  fastcluster.py  meson.build  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
appveyor/: run_with_env.cmd
docs/: Makefile  fastcluster.Rtex  fastcluster.tex
src/: fastcluster.cpp  fastcluster_python.cpp
tests/: __init__.py  nantest.py  test.py  test_linkage.py  test_vector.py  vectortest.py
